--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 .main {
-    margin-left: 160px; // TODO: Colocar automaticamente, atualmente esta se baseando na largua da sidebar
+    font-family: 'Bona Nova', serif;
+    margin: 0 250px 0 250px; // TODO: Colocar automaticamente, atualmente esta se baseando na largua da sidebar
     padding: 0px 10px;
 }
