--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -10,6 +10,7 @@ $font-stack:    Helvetica, sans-serif;
 ////////////////////////
 
 body {
+  font-family: 'Bona Nova', serif;
   font: 100% $font-stack;
   color: $body-color;
 }
