--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,8 @@
 .sidebar {
+    font-family: 'Bona Nova', serif;
+    font-family: 'Press Start 2P', cursive;
     height: 100%;
-    width: 160px;
+    width: 200px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -11,9 +13,10 @@
 
     a {
         padding: 6px 8px 6px 16px;
+        margin-top: 10px;
         text-decoration: none;
-        font-size: 25px;
-        color: #818181;
+        font-size: 22px;
+        color: #00ff15;
         display: block;
     }
 
@@ -29,6 +32,6 @@
         padding-top: 15px;
     }
     .sidebar a {
-        font-size: 18px;
+        font-size: 10px;
     }
 }
