--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,15 @@
 .main {
     font-family: 'Bona Nova', serif;
-    margin: 0 250px 0 250px; // TODO: Colocar automaticamente, atualmente esta se baseando na largua da sidebar
-    padding: 0px 10px;
+    // margin: 0 250px 0 250px; // TODO: Colocar automaticamente, atualmente esta se baseando na largua da sidebar
 }
+
+.post {
+    max-width: 720px;
+    margin: auto;
+
+    &__body {
+        text-align: justify;
+        line-height: 1.6;
+    }
+}
+
