--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -1,4 +1,5 @@
 @import './sidebar.scss';
+@import './navbar.scss';
 @import './main.scss';
 
 ////// COLORS DEFINITIONS 
@@ -13,4 +14,5 @@ body {
   font-family: 'Bona Nova', serif;
   font: 100% $font-stack;
   color: $body-color;
+  margin: 0;
 }
