--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,15 @@
 .topnav {
     overflow: hidden;
     background-color: #333;
+    height: 100px;
+
+    &__content {
+        font-weight: bold;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
   }
   
 .topnav a {
