--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
-    font-family: 'Bona Nova', serif;
-    font-family: 'Press Start 2P', cursive;
+    font-family: "Bona Nova", serif;
+    font-family: "Press Start 2P", cursive;
     height: 100%;
     width: 200px;
     position: fixed;
@@ -23,8 +23,6 @@
     a:hover {
         color: #f1f1f1;
     }
-
-
 }
 
 @media screen and (max-height: 450px) {
