--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,35 +1,35 @@
 .sidebar {
-    font-family: "Bona Nova", serif;
-    font-family: "Press Start 2P", cursive;
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 20px;
+  font-family: 'Bona Nova', serif;
+  font-family: 'Press Start 2P', cursive;
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
 
-    a {
-        padding: 6px 8px 6px 16px;
-        margin-top: 10px;
-        text-decoration: none;
-        font-size: 22px;
-        color: #00ff15;
-        display: block;
-    }
+  a {
+    padding: 6px 8px 6px 16px;
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #00ff15;
+    display: block;
+  }
 
-    a:hover {
-        color: #f1f1f1;
-    }
+  a:hover {
+    color: #f1f1f1;
+  }
 }
 
 @media screen and (max-height: 450px) {
-    .sidebar {
-        padding-top: 15px;
-    }
-    .sidebar a {
-        font-size: 10px;
-    }
+  .sidebar {
+    padding-top: 15px;
+  }
+  .sidebar a {
+    font-size: 10px;
+  }
 }
